[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["HopMaTuB <sunkiper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
pymysql = "^1.1.1"
mysql-connector-python = "^9.2.0"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
mysql = "^0.0.3"
pydantic = "^2.10.6"
openpyxl = "^3.1.5"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
